--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,12 +1,12 @@
-.main-header__heading--lil {
+.header__heading--lil {
     color: rgb(226, 70, 161);
 }
 
-.main-header__heading {
+.header__heading {
     font-size: 70px;
 }
 
-.main-nav {
+.header__nav {
     margin-top: 10px;
     list-style: none;
     padding-left: 5px;
@@ -14,25 +14,25 @@
     height: 23px;
 }
 
-.main-nav__item {
+.header__nav__item {
     display: inline-block;
 }
 
-.main-nav__item a {
+.header__nav__item a {
     color: rgb(226, 70, 161);
     padding: 5px;
     border-radius: 2px;
     text-decoration: none;
 }
 
-.main-nav__item a:hover {
+.header__nav__item a:hover {
     color: blueviolet;
 }
 
-.main-nav__item a:active {
+.header__nav__item a:active {
     color: pink;
 }
 
-.main-nav__item a::after {
+.header__nav__item a::after {
     content: " |";
 }
