--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -20,6 +20,10 @@ body {
     font-size: 120px;
     text-align: center;
     opacity: 0.75;
+    border: 10px outset #212529;
+    border-radius: 50px;
+    padding: 15px;
+    margin: 50px auto;
 }
 
 .color-pink {
@@ -30,12 +34,14 @@ body {
     margin-top: 10px;
     list-style: none;
     padding-left: 5px;
-    background-color: #212529;
+    background-color: #22282e;
     height: 24px;
 }
 
 .header__nav__item {
     display: inline-block;
+    font-weight: bold;
+    margin: 2px;
 }
 
 .header__nav__item a {
