--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -12,6 +12,11 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+html {
+    font-size: 62.5%;
 }
 
 body {
@@ -22,30 +27,40 @@ body {
 
 .header__heading {
     font-family: 'Peep Title';
-    font-size: 120px;
-    width: 700px;
+    font-size: 12rem;
+    width: 70rem;
     text-align: center;
     opacity: 0.75;
-    border: 10px outset #000000ea;
+    border: 10px inset #2a0b53;
     border-radius: 50px;
     padding: 15px;
     margin: 50px auto;
+    text-shadow: #000000 5px 0 11px;
+}
+
+.color-violet {
+    color: #48079c;
 }
 
 .color-pink {
     color: #e246a1;
+    text-shadow: #212529 1px 0 10px;
+}
+
+.dark-shadow {
+    text-shadow: #48079c 5px 0 11px;
 }
 
 .header__nav {
     margin: 10px auto;
-    width: 658px;
+    width: 68rem;
     height: auto;
     list-style: none;
     text-align: center;
     padding-left: 5px;
-    background-color: #22282e;
-    height: 24px;
-    border: 4px outset #e246a1c5;
+    background-color: #2b3138;
+    height: 3.4rem;
+    border: 4px outset #48079c;
     border-radius: 10px;
     opacity: 95%;
 }
@@ -53,6 +68,7 @@ body {
 .header__nav__item {
     display: inline-block;
     font-weight: bold;
+    font-size: 1.6rem;
     margin: 2px;
 }
 
@@ -69,7 +85,7 @@ body {
 
 .header__nav__item a:active {
     color: pink;
-    font-size: 20px;
+    font-size: 1.8rem;
 }
 
 .header__nav__item a::after {
@@ -82,26 +98,19 @@ body {
 
 h3 {
     font-family: 'Peep Title';
-    font-size: 70px;
+    font-size: 7rem;
     text-align: center;
     margin-top: 30px;
     margin-bottom: 50px;
     opacity: 75%;
-}
-
-h4 {
-    font-family: 'Peep Title';
-    font-size: 40px;
-    text-align: center;
-    margin-top: 20px;
-    margin-bottom: 10px;
-    opacity: 75%;
+    text-shadow: #e246a1 1px 0 10px;
 }
 
 .albums__title {
     color: #212529;
+    text-shadow: #e246a1 1px 0 10px;
     font-family: 'Goth';
-    font-size: 50px;
+    font-size: 5rem;
     margin: 20px 0px 20px 50px;
 }
 
@@ -112,14 +121,16 @@ h4 {
 .albums__image__caption {
     margin-left: 100px;
     opacity: 60%;
+    font-size: 1.5rem;
 }
 
 .albums__question {
     font-weight: bold;
-    color: #22282e;
     margin: 30px 0px 15px 100px;
     width: 420px;
     text-align: center;
+    font-size: 1.8rem;
+    text-shadow: #212529 0.5px 0px 3px;
 }
 
 .albums__select {
@@ -149,6 +160,17 @@ h4 {
     border-radius: 5px;
     border-color: #212529;
     font-weight: bold;
+}
+
+footer h4 {
+    font-family: 'Peep Title';
+    font-size: 4rem;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    opacity: 75%;
+
+    text-shadow: #e246a1 1px 0 10px;
 }
 
 footer ul {
