--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -26,26 +26,36 @@ body {
     width: 700px;
     text-align: center;
     opacity: 0.75;
-    border: 10px outset #000000ea;
+    border: 10px inset #2a0b53;
     border-radius: 50px;
     padding: 15px;
     margin: 50px auto;
+    text-shadow: #000000 5px 0 11px;
+}
+
+.color-violet {
+    color: #48079c;
 }
 
 .color-pink {
     color: #e246a1;
+    text-shadow: #212529 1px 0 10px;
+}
+
+.dark-shadow {
+    text-shadow: #48079c 5px 0 11px;
 }
 
 .header__nav {
     margin: 10px auto;
-    width: 658px;
+    width: 68rem;
     height: auto;
     list-style: none;
     text-align: center;
     padding-left: 5px;
-    background-color: #22282e;
-    height: 24px;
-    border: 4px outset #e246a1c5;
+    background-color: #2b3138;
+    height: 3.4rem;
+    border: 4px outset #48079c;
     border-radius: 10px;
     opacity: 95%;
 }
@@ -53,13 +63,14 @@ body {
 .header__nav__item {
     display: inline-block;
     font-weight: bold;
+    font-size: 1.6rem;
     margin: 2px;
 }
 
 .header__nav__item a {
     color: #e246a1;
-    padding: 5px;
-    border-radius: 2px;
+    padding: 0.5rem;
+    border-radius: 0.2rem;
     text-decoration: none;
 }
 
@@ -84,51 +95,45 @@ h3 {
     font-family: 'Peep Title';
     font-size: 70px;
     text-align: center;
-    margin-top: 30px;
-    margin-bottom: 50px;
+    margin-top: 3rem;
+    margin-bottom: 5rem;
     opacity: 75%;
-}
-
-h4 {
-    font-family: 'Peep Title';
-    font-size: 40px;
-    text-align: center;
-    margin-top: 20px;
-    margin-bottom: 10px;
-    opacity: 75%;
+    text-shadow: #e246a1 1px 0 10px;
 }
 
 .albums__title {
     color: #212529;
+    text-shadow: #e246a1 1px 0 10px;
     font-family: 'Goth';
-    font-size: 50px;
+    font-size: 5rem;
     margin: 20px 0px 20px 50px;
 }
 
 .albums__image {
-    margin-left: 100px;
+    margin-left: 10rem;
 }
 
 .albums__image__caption {
-    margin-left: 100px;
+    margin-left: 10rem;
     opacity: 60%;
 }
 
 .albums__question {
     font-weight: bold;
-    color: #22282e;
     margin: 30px 0px 15px 100px;
     width: 420px;
     text-align: center;
+    font-size: 1.8rem;
+    text-shadow: #212529 0.5px 0px 3px;
 }
 
 .albums__select {
     background: radial-gradient(#e246a1, #616263);
     font-weight: bold;
     color: #212529;
-    border: 5px;
-    border-radius: 3px;
-    margin: 0px 0px 15px 175px;
+    border: 0.5rem;
+    border-radius: 0.3rem;
+    margin: 0rem 0rem 1.5rem 17.5rem;
 }
 
 .albums__select option {
@@ -146,9 +151,20 @@ h4 {
 .favorite-song {
     background: radial-gradient(#e246a1, #616263);
     color: #212529;
-    border-radius: 5px;
+    border-radius: 0.5rem;
     border-color: #212529;
     font-weight: bold;
+}
+
+footer h4 {
+    font-family: 'Peep Title';
+    font-size: 4rem;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    opacity: 75%;
+
+    text-shadow: #e246a1 1px 0 10px;
 }
 
 footer ul {
@@ -158,11 +174,11 @@ footer ul {
 footer li {
     display: inline-block;
     font-weight: bold;
-    margin: 10px;
+    margin: 1rem;
 }
 
 footer a {
     color: #000000d2;
-    padding: 10px;
+    padding: 1rem;
     text-decoration: none;
 }
