--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -31,11 +31,11 @@ body {
     width: 70rem;
     text-align: center;
     opacity: 0.75;
-    border: 10px inset #2a0b53;
-    border-radius: 50px;
-    padding: 15px;
-    margin: 50px auto;
-    text-shadow: #000000 5px 0 11px;
+    border: 1rem inset #2a0b53;
+    border-radius: 5rem;
+    padding: 1.5rem;
+    margin: 5rem auto;
+    text-shadow: #000000 0.5rem 0 1.1rem;
 }
 
 .color-violet {
@@ -44,24 +44,24 @@ body {
 
 .color-pink {
     color: #e246a1;
-    text-shadow: #212529 1px 0 10px;
+    text-shadow: #212529 0.1rem 0 1rem;
 }
 
-.dark-shadow {
-    text-shadow: #48079c 5px 0 11px;
+.violet-shadow {
+    text-shadow: #48079c 0.5rem 0 1.1rem;
 }
 
 .header__nav {
-    margin: 10px auto;
+    margin: 1rem auto;
     width: 68rem;
     height: auto;
     list-style: none;
     text-align: center;
-    padding-left: 5px;
+    padding-left: 0.5rem;
     background-color: #2b3138;
     height: 3.4rem;
-    border: 4px outset #48079c;
-    border-radius: 10px;
+    border: 0.4rem outset #48079c;
+    border-radius: 1rem;
     opacity: 95%;
 }
 
@@ -69,13 +69,13 @@ body {
     display: inline-block;
     font-weight: bold;
     font-size: 1.6rem;
-    margin: 2px;
+    margin: 0.2rem;
 }
 
 .header__nav__item a {
     color: #e246a1;
-    padding: 5px;
-    border-radius: 2px;
+    padding: 0.5rem;
+    border-radius: 0.2rem;
     text-decoration: none;
 }
 
@@ -100,46 +100,46 @@ h3 {
     font-family: 'Peep Title';
     font-size: 7rem;
     text-align: center;
-    margin-top: 30px;
-    margin-bottom: 50px;
+    margin-top: 3rem;
+    margin-bottom: 5rem;
     opacity: 75%;
-    text-shadow: #e246a1 1px 0 10px;
+    text-shadow: #e246a1 0.1rem 0 1rem;
 }
 
 .albums__title {
     color: #212529;
-    text-shadow: #e246a1 1px 0 10px;
+    text-shadow: #e246a1 0.1rem 0 1rem;
     font-family: 'Goth';
     font-size: 5rem;
-    margin: 20px 0px 20px 50px;
+    margin: 2rem 0rem 2rem 5rem;
 }
 
 .albums__image {
-    margin-left: 100px;
+    margin-left: 10rem;
 }
 
 .albums__image__caption {
-    margin-left: 100px;
+    margin-left: 10rem;
     opacity: 60%;
     font-size: 1.5rem;
 }
 
 .albums__question {
     font-weight: bold;
-    margin: 30px 0px 15px 100px;
-    width: 420px;
+    margin: 3rem 0rem 1.5rem 10rem;
+    width: 42rem;
     text-align: center;
     font-size: 1.8rem;
-    text-shadow: #212529 0.5px 0px 3px;
+    text-shadow: #212529 0.05rem 0rem 0.3rem;
 }
 
 .albums__select {
     background: radial-gradient(#e246a1, #616263);
     font-weight: bold;
     color: #212529;
-    border: 5px;
-    border-radius: 3px;
-    margin: 0px 0px 15px 175px;
+    border: 0.5rem;
+    border-radius: 0.3rem;
+    margin: 0rem 0rem 1.5rem 17.5rem;
 }
 
 .albums__select option {
@@ -157,7 +157,7 @@ h3 {
 .favorite-song {
     background: radial-gradient(#e246a1, #616263);
     color: #212529;
-    border-radius: 5px;
+    border-radius: 0.5rem;
     border-color: #212529;
     font-weight: bold;
 }
@@ -166,11 +166,11 @@ footer h4 {
     font-family: 'Peep Title';
     font-size: 4rem;
     text-align: center;
-    margin-top: 20px;
-    margin-bottom: 10px;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
     opacity: 75%;
 
-    text-shadow: #e246a1 1px 0 10px;
+    text-shadow: #e246a1 0.1rem 0 1rem;
 }
 
 footer ul {
@@ -180,11 +180,11 @@ footer ul {
 footer li {
     display: inline-block;
     font-weight: bold;
-    margin: 10px;
+    margin: 1rem;
 }
 
 footer a {
     color: #000000d2;
-    padding: 10px;
+    padding: 1rem;
     text-decoration: none;
 }
